--- a/nuliminal/theme:nuliminal.css
+++ b/nuliminal/theme:nuliminal.css
@@ -17,7 +17,7 @@
 @import url("theme:nuliminal-mask-icons.css");
 
 /* Material Icons */
-@import url(theme:nuliminal-material-icons.css);
+@import url("theme:nuliminal-material-icons.css");
  
 /* Root Variables: When making a new theme, see: https://github.com/Nu-SCPTheme/Black-Highlighter/blob/master/src/css/parts/root.css */
  
