--- a/nuliminal/theme:nuliminal-sidebar-theme.css
+++ b/nuliminal/theme:nuliminal-sidebar-theme.css
@@ -460,5 +460,5 @@
     border-radius: 0 0.6rem 0.6rem 0;
     background-color: rgb(var(--swatch-sidebar-collapsible-tab-bg));
     top: calc(50vh - 6.5rem);
-    background-image: url("theme:nuliminal-nuliminalsidebar-arrows.svg");
+    background-image: url("https://mynameismx.github.io/RuBackroomsThemes/nuliminal/theme:nuliminal-nuliminalsidebar-arrows.svg");
 }
