--- a/nuliminal/theme:nuliminal.css
+++ b/nuliminal/theme:nuliminal.css
@@ -28,7 +28,7 @@
     --theme-name: "NuLiminal Theme";
  
     /* Header */
-    --logo-image: url("https://backrooms-dev.files.dentrado.art/local--files/system:themes/logo.svg");
+    --logo-image: url("https://files.backroomswiki.ru/local--files/system:themes/logo.svg");
     --header-title: "Закулисье";
     --header-subtitle: "Вы бывали здесь раньше.";
     --swatch-headerh1-color: var(--white-monochrome);
