--- a/nuliminal/theme:nuliminal.css
+++ b/nuliminal/theme:nuliminal.css
@@ -18,3 +18,6 @@
 
 /* Material Icons */
 @import url("https://mynameismx.github.io/RuBackroomsThemes/nuliminal/theme:nuliminal-material-icons.css");
+
+/* Collapsible Sidebar */
+@import url("https://mynameismx.github.io/RuBackroomsThemes/nuliminal/theme:nuliminal-sidebar-theme.css");
